# openCern

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy-worker.yml  docker-publish.yml  npm-publish.yml  release.yml
app/electron/: package-lock.json  package.json  particle_collision.py  startup_video.py  test.js
app/next-ui/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json
app/next-ui/app/: AIChat.css  ConvexClientProvider.jsx  MonacoEditor.js  ParticleVisualization.js  aiSystemPrompt.js  globals.css  layout.js  page.js
containers/api/: Dockerfile  config.py  main.py  models.py
containers/api/routers/: datasets.py  downloads.py  files.py  processing.py
containers/api/services/: archive_handler.py  catalog.py  downloader.py
containers/cpp-processor/: CMakeLists.txt  Dockerfile
containers/data-processor/: Dockerfile  main.py
containers/streaming/: Cargo.toml  Dockerfile
containers/streaming/src/: main.rs
containers/xrootd/: Dockerfile  main.py
opencern-cli/: CONTRIBUTING.md  LICENSE  LICENSE.enterprise  README.md  package-lock.json  package.json  tsconfig.json
opencern-cli/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
opencern-cli/assets/: docker-compose.template.yml
opencern-cli/docs/: OPEN_SOURCE_BOUNDARY.md
opencern-cli/quantum/: Dockerfile  requirements.txt  vqc_classifier.py
opencern-cli/src/: app.tsx
opencern-cli/src/commands/: ask.ts  (+12 more)
workers/auth-system/: package-lock.json  package.json  wrangler.toml
workers/cli-auth/: package.json  wrangler.toml
(+58 files in other folders)
