[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "streaming"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
warp = { version = "0.4.2", features = ["server"] }
